# kyber-gake

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  generate_graphics.py  generate_results.py  monitor-and-compile.sh
.github/workflows/: build.yml  tests.yml
avx2/: CMakeLists.txt  aes256gcm.c  aes256gcm.h  ca.c  ca_qrom.c  commitment.c  commitment.h  commitment_qrom.c  commitment_qrom.h  ds_benchmark.h  emoji.c  emoji.h  gake.c  gake.h  gake_network.c  gake_network.h  gake_qrom.c  gake_qrom.h  gake_qrom_network.c  gake_qrom_network.h  indcca.c  indcca.h  indcca_qrom.c  indcca_qrom.h  init.c  io.c  io.h  io_qrom.c  io_qrom.h  kem_det.c  kem_det.h  kem_qrom.c  kem_qrom.h  kex_qrom.c  kex_qrom.h  test_aes256gcm.c  test_commitment.c  test_commitment_qrom.c  test_gake.c  test_gake_qrom.c  (+7 more)
docker/: config.yml  dockerfiles.py  execute.py
graphs/: config.yaml  generate_graphics.py  generate_results.py
networking/: CMakeLists.txt  client.c  common.h  emoji.c  emoji.h  gake_network.c  init.c  io.c  io.h  server.c  test_emoji.c
ref/: CMakeLists.txt  aes256ccm.c  aes256ccm.h  aes256gcm.c  aes256gcm.h  ca.c  ca_qrom.c  chacha20poly1305.c  chacha20poly1305.h  commitment.c  commitment.h  commitment_chacha20poly1305.c  commitment_chacha20poly1305.h  commitment_qrom.c  commitment_qrom.h  common.h  emoji.c  emoji.h  gake.c  gake.h  gake_network.c  gake_network.h  gake_qrom.c  gake_qrom.h  gake_qrom_network.c  gake_qrom_network.h  indcca.c  indcca.h  indcca_chacha20poly1305.c  indcca_chacha20poly1305.h  indcca_qrom.c  indcca_qrom.h  init.c  io.c  io.h  io_qrom.c  io_qrom.h  kem_det.c  kem_det.h  kem_qrom.c  (+24 more)
