set(KYBER_SRCS kex.c kem.c indcpa.c polyvec.c poly.c ntt.c cbd.c reduce.c verify.c)
set(KYBER_QROM_SRCS kex.c kex_qrom.c kem.c kem_qrom.c indcpa.c polyvec.c poly.c ntt.c cbd.c reduce.c verify.c)
set(KYBER_FIPS202_SRCS ${KYBER_SRCS} symmetric-shake.c)
set(KYBER_QROM_FIPS202_SRCS ${KYBER_QROM_SRCS} symmetric-shake.c)
set(FIPS202_SRCS fips202.c)
set(AES256CTR_SRCS aes256ctr.c)
set(SHA2_SRCS sha256.c sha512.c)
set(TEST_GAKE_SRCS ${KYBER_SRCS} gake.c utils.c aes256gcm.c kem_det.c commitment.c randombytes.c indcca.c kex.c test_gake.c)
set(TEST_GAKE_QROM_SRCS ${KYBER_QROM_SRCS} gake_qrom.c utils.c aes256gcm.c kem_qrom.c commitment_qrom.c randombytes.c indcca_qrom.c kex.c test_gake_qrom.c)
set(TEST_KYBER_SRCS test_kyber.c randombytes.c)
set(TEST_KEX_SRCS test_kex.c randombytes.c)
set(TEST_VECTORS_SRCS test_vectors.c)
set(TEST_SPEED_SRCS test_kyber.c randombytes.c)
set(TEST_SPEED_GAKE_SRCS ${KYBER_SRCS} gake.c utils.c aes256gcm.c kem_det.c commitment.c randombytes.c indcca.c kex.c test_gake_speed.c)
set(TEST_SPEED_GAKE_QROM_SRCS ${KYBER_QROM_SRCS} gake_qrom.c utils.c aes256gcm.c kem_qrom.c commitment_qrom.c randombytes.c indcca_qrom.c kex.c test_gake_qrom_speed.c)
set(TEST_NETWORK_GAKE_SRCS gake_network.c emoji.c io.c gake.c utils.c kex.c randombytes.c commitment.c indcca.c aes256gcm.c kem.c kem_det.c)
set(TEST_CA_GAKE_SRCS ca.c io.c gake.c utils.c kex.c randombytes.c commitment.c indcca.c aes256gcm.c kem.c kem_det.c)

if(MSVC)
  add_compile_options(/nologo /O2 /W4 /WX /wd4146)
else()
  add_compile_options(-Wall -Wextra -Wpedantic -Werror)
  add_compile_options(-Wmissing-prototypes -Wredundant-decls -Wshadow -Wpointer-arith)
  add_compile_options(-O2 -fwrapv)
endif()

add_library(fips202_ref ${FIPS202_SRCS})
add_library(aes256ctr_ref ${AES256CTR_SRCS})
add_library(sha2_ref ${SHA2_SRCS})

# Kyber 512
add_library(kyber512_ref ${KYBER_FIPS202_SRCS})
target_compile_definitions(kyber512_ref PUBLIC KYBER_K=2)
target_link_libraries(kyber512_ref INTERFACE fips202_ref)

add_library(kyber_qrom512_ref ${KYBER_QROM_FIPS202_SRCS})
target_compile_definitions(kyber_qrom512_ref PUBLIC KYBER_K=2)
target_link_libraries(kyber_qrom512_ref INTERFACE fips202_ref)

add_executable(test_kyber512_ref ${TEST_KYBER_SRCS})
add_executable(test_kex512_ref ${TEST_KEX_SRCS})
add_executable(test_vectors512_ref ${TEST_VECTORS_SRCS})
add_executable(test_gake512_ref ${TEST_GAKE_SRCS})
add_executable(gake_network512_ref ${TEST_NETWORK_GAKE_SRCS})
add_executable(gake_ca512_ref ${TEST_CA_GAKE_SRCS})
add_executable(test_gake_qrom512_ref ${TEST_GAKE_QROM_SRCS})
add_executable(test_gake_speed512_ref ${TEST_SPEED_GAKE_SRCS})
add_executable(test_gake_qrom_speed512_ref ${TEST_SPEED_GAKE_QROM_SRCS})

target_link_libraries(test_kyber512_ref kyber512_ref)
target_link_libraries(test_kex512_ref kyber512_ref)
target_link_libraries(test_vectors512_ref kyber512_ref)
target_link_libraries(gake_network512_ref kyber512_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(gake_ca512_ref kyber512_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake512_ref kyber512_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_qrom512_ref kyber_qrom512_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_speed512_ref kyber512_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_qrom_speed512_ref kyber_qrom512_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})

# Kyber 768
add_library(kyber768_ref ${KYBER_FIPS202_SRCS})
target_compile_definitions(kyber768_ref PUBLIC KYBER_K=3)
target_link_libraries(kyber768_ref INTERFACE fips202_ref)

add_library(kyber_qrom768_ref ${KYBER_QROM_FIPS202_SRCS})
target_compile_definitions(kyber_qrom768_ref PUBLIC KYBER_K=3)
target_link_libraries(kyber_qrom768_ref INTERFACE fips202_ref)

add_executable(test_kyber768_ref ${TEST_KYBER_SRCS})
add_executable(test_kex768_ref ${TEST_KEX_SRCS})
add_executable(test_vectors768_ref ${TEST_VECTORS_SRCS})
add_executable(test_gake768_ref ${TEST_GAKE_SRCS})
add_executable(gake_network768_ref ${TEST_NETWORK_GAKE_SRCS})
add_executable(gake_ca768_ref ${TEST_CA_GAKE_SRCS})
add_executable(test_gake_qrom768_ref ${TEST_GAKE_QROM_SRCS})
add_executable(test_gake_speed768_ref ${TEST_SPEED_GAKE_SRCS})
add_executable(test_gake_qrom_speed768_ref ${TEST_SPEED_GAKE_QROM_SRCS})
target_link_libraries(test_kyber768_ref kyber768_ref)
target_link_libraries(test_kex768_ref kyber768_ref)
target_link_libraries(test_vectors768_ref kyber768_ref)
target_link_libraries(gake_network768_ref kyber768_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(gake_ca768_ref kyber768_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake768_ref kyber768_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_qrom768_ref kyber_qrom768_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_speed768_ref kyber768_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_qrom_speed768_ref kyber_qrom768_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})


# Kyber 1024
add_library(kyber1024_ref ${KYBER_FIPS202_SRCS})
target_compile_definitions(kyber1024_ref PUBLIC KYBER_K=4)
target_link_libraries(kyber1024_ref INTERFACE fips202_ref)

add_library(kyber_qrom1024_ref ${KYBER_QROM_FIPS202_SRCS})
target_compile_definitions(kyber_qrom1024_ref PUBLIC KYBER_K=4)
target_link_libraries(kyber_qrom1024_ref INTERFACE fips202_ref)

add_executable(test_kyber1024_ref ${TEST_KYBER_SRCS})
add_executable(test_kex1024_ref ${TEST_KEX_SRCS})
add_executable(test_vectors1024_ref ${TEST_VECTORS_SRCS})
add_executable(test_gake1024_ref ${TEST_GAKE_SRCS})
add_executable(gake_network1024_ref ${TEST_NETWORK_GAKE_SRCS})
add_executable(gake_ca1024_ref ${TEST_CA_GAKE_SRCS})
add_executable(test_gake_qrom1024_ref ${TEST_GAKE_QROM_SRCS})
add_executable(test_gake_speed1024_ref ${TEST_SPEED_GAKE_SRCS})
add_executable(test_gake_qrom_speed1024_ref ${TEST_SPEED_GAKE_QROM_SRCS})
target_link_libraries(test_kyber1024_ref kyber1024_ref)
target_link_libraries(test_kex1024_ref kyber1024_ref)
target_link_libraries(test_vectors1024_ref kyber1024_ref)
target_link_libraries(gake_network1024_ref kyber1024_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(gake_ca1024_ref kyber1024_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake1024_ref kyber1024_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_qrom1024_ref kyber_qrom1024_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_speed1024_ref kyber1024_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
target_link_libraries(test_gake_qrom_speed1024_ref kyber_qrom1024_ref ${OPENSSL_CRYPTO_LIBRARY} Threads::Threads ${CMAKE_DL_LIBS})
